testdata/baselines/reference/compiler/jsDocPrivateConstructor.errors.txt
main.js(7,1): error TS2673: Constructor of class 'C' is private and only accessible within the class declaration.


==== main.js (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/4219
    
    class C {
      /** @private */
      constructor() {}
    }
    new C();
    ~~~~~~~
!!! error TS2673: Constructor of class 'C' is private and only accessible within the class declaration.
    